--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -16,18 +16,7 @@ jobs:
       - name: Decide the branch name
         run: echo "NEW_BRANCH_NAME=$(echo "${{ github.event.inputs.title }}" | tr -s ' ' | tr ' ' '-' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
-      - name: Figure out the next pull request number
-        run:  |
-          echo $GITHUB_SERVER_URL
-          echo $GITHUB_REPOSITORY
-          echo "${GITHUB_REPOSITORY}"
-          echo "$( echo ${GITHUB_REPOSITORY})"
-          echo "${{ env.GITHUB_REPOSITORY }}"
-          export
-          cat $GITHUB_ENV
-          echo "$(echo -H 'Accept: application/vnd.github.v3+json' -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' 'https://api.github.com/repos/${{ github.repository }}/pulls?state=all&amp;sort=created&amp;direction=desc&amp;per_page=1')"
-
-      - name: Figure out the next pull request number
+      - name: Calculate the next pull request number
         run:  |
           echo "NEXT_PR_NUM=$(curl -H 'Accept: application/vnd.github.v3+json' -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' 'https://api.github.com/repos/${{ github.repository }}/pulls?state=all&amp;sort=created&amp;direction=desc&amp;per_page=1' | grep '\"number\":' | tr -dc '0-9' | awk '{ print $1 + 1 }')" >> $GITHUB_ENV
 
@@ -49,17 +38,17 @@ jobs:
       - name: Output the body
         run: echo "${{ env.PR_BODY }}"
 
-      # - name: Create Pull Request
-      #   uses: peter-evans/create-pull-request@v3
-      #   with:
-      #     commit-message: {{ github.event.inputs.title }}
-      #     committer:      GitHub <noreply@github.com>
-      #     author:         ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
-      #     branch:         ${{ env.NEW_BRANCH_NAME }}
-      #     delete-branch:  true
-      #     title:          '${{ github.event.inputs.title }}'
-      #     assignees:      ${{ github.actor }}
-      #     draft:          true
-      #     labels:         in-progress
-      #     body: |
-      #       TODO
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3
+        with:
+          commit-message: {{ github.event.inputs.title }}
+          committer:      GitHub <noreply@github.com>
+          author:         ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
+          branch:         ${{ env.NEW_BRANCH_NAME }}
+          delete-branch:  true
+          title:          '${{ github.event.inputs.title }}'
+          assignees:      ${{ github.actor }}
+          draft:          true
+          labels:         in-progress
+          body: |
+            ${{ env.PR_BODY }}
