--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
-          commit-message: {{ github.event.inputs.title }}
+          commit-message: ${{ github.event.inputs.title }}
           committer:      GitHub <noreply@github.com>
           author:         ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
           branch:         ${{ env.NEW_BRANCH_NAME }}
