--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -42,16 +42,16 @@ jobs:
       - name: Output the body
         run: echo "${{ env.PR_BODY }}"
 
-      # - name: Create Pull Request
-      #   uses: peter-evans/create-pull-request@v3
-      #   with:
-      #     commit-message: 'build: ${{ github.event.inputs.title }} [skip ci]'
-      #     committer:      GitHub <noreply@github.com>
-      #     branch:         ${{ env.NEW_BRANCH_NAME }}
-      #     delete-branch:  true
-      #     title:          '${{ github.event.inputs.title }}'
-      #     assignees:      ${{ github.actor }}
-      #     draft:          true
-      #     labels:         in-progress
-      #     body: |
-      #       ${{ env.PR_BODY }}
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3
+        with:
+          commit-message: 'build: ${{ github.event.inputs.title }} [skip ci]'
+          committer:      GitHub <noreply@github.com>
+          branch:         ${{ env.NEW_BRANCH_NAME }}
+          delete-branch:  true
+          title:          '${{ github.event.inputs.title }}'
+          assignees:      ${{ github.actor }}
+          draft:          true
+          labels:         in-progress
+          body: |
+            ${{ env.PR_BODY }}
