--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -27,7 +27,7 @@ jobs:
         id:   pr_body
         run:  |
           echo 'PR_BODY<<EOF' >> $GITHUB_ENV
-          echo $(sed '1s/.*/## ${{ github.event.inputs.title }}/' .github/PULL_REQUEST_TEMPLATE.md) >> $GITHUB_ENV
+          echo $(cat .github/PULL_REQUEST_TEMPLATE.md) >> $GITHUB_ENV
           echo 'EOF' >> $GITHUB_ENV
 
       - name: Output the branch name
