--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -24,9 +24,9 @@ jobs:
         run:  |
           mkdir -p .meta
           touch .meta/${{ env.NEXT_PR_NUM }}.md
-          echo "## ${{ github.event.inputs.title }}"                                     >> .meta/${{ env.NEXT_PR_NUM }}.md
-          echo "By [@${{ github.actor }}](${{ github.server_url }}/${{ github.actor }})" >> .meta/${{ env.NEXT_PR_NUM }}.md
-          date "+Created %Y-%m-%d %H:%M"                                                 >> .meta/${{ env.NEXT_PR_NUM }}.md
+          echo "## ${{ github.event.inputs.title }}\n"                                     >> .meta/${{ env.NEXT_PR_NUM }}.md
+          echo "By [@${{ github.actor }}](${{ github.server_url }}/${{ github.actor }})\n" >> .meta/${{ env.NEXT_PR_NUM }}.md
+          date "+Created %Y-%m-%d %H:%M"                                                   >> .meta/${{ env.NEXT_PR_NUM }}.md
 
       - name: Generate the PR body
         run:  |
