--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "jira-client": "^8.0.0",
     "lodash": "^4.17.21",
     "mustache": "^4.2.0",
-    "node-fetch": "^3.2.0",
+    "node-fetch": "2",
     "unique-names-generator": "^4.6.0"
   },
   "devDependencies": {
